k3s-server/k3s-server-common-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1 
kind: Gateway
metadata:
  name: k3s-server-gateway
  namespace: istio-gateway
spec:
  gatewayClassName: istio
  listeners:
  - protocol: HTTPS
    port: 443
    name: k3s-server-gateway
    tls:
      mode: Terminate
      certificateRefs:
        - name: rajesh-tls-cert
          namespace: certificate-ns 
          kind: Secret
    allowedRoutes:
      namespaces:
        from: All
